--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -3859,6 +3859,7 @@ CONFIG_ECRYPT_FS=y
 CONFIG_WTL_ENCRYPTION_FILTER=y
 CONFIG_SDCARD_FS=y
 CONFIG_SDCARD_FS_CI_SEARCH=y
+CONFIG_SDCARD_FS_XATTR=y
 # CONFIG_SCFS is not set
 # CONFIG_SYSTEM_COMPRESSED is not set
 # CONFIG_HFS_FS is not set
