--- a/drivers/video/msm/mdss/Makefile
+++ b/drivers/video/msm/mdss/Makefile
@@ -94,6 +94,8 @@ obj-$(CONFIG_FB_MSM_MDSS) += lcd_notify.o
 
 obj-$(CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS) += mdss_dsi_status.o
 
+obj-$(CONFIG_FB_MSM_MDSS_KCAL_CTRL) += mdss_mdp_kcal_ctrl.o
+
 obj-$(CONFIG_FB_MSM_EDP_SAMSUNG) += edp-eeprom.o edp-backlight.o
 ifeq ($(CONFIG_FB_MSM_EDP_SAMSUNG),y)
 obj-$(CONFIG_EDP_TCON_MDNIE) += edp_tcon_mdnie.o
