--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -3777,6 +3777,7 @@ CONFIG_SENSORS_SSP_MAX88921=y
 # File systems
 #
 CONFIG_DCACHE_WORD_ACCESS=y
+CONFIG_FS_TRANSPARENT_COMPRESSION=y
 CONFIG_LOW_ORDER_SEQ_MALLOC=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
