--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -3680,6 +3680,7 @@ CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
+CONFIG_ADRENO_IDLER=y
 CONFIG_DEVFREQ_GOV_MSM_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_CPUBW_HWMON=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
