defconfig: Enable UID_CPUTIME

--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -1487,6 +1487,7 @@ CONFIG_BCM2079X_NFC_I2C=y
 # CONFIG_NFC_PN547_PMC8974_CLK_REQ is not set
 CONFIG_TI_DRV2667=y
 # CONFIG_C2PORT is not set
+CONFIG_UID_CPUTIME=y
 
 #
 # EEPROM support
