arm/dts: Schedule mmcqd on idle CPU Change-Id: I54873e9d1b2ffddf81e8fdff021fe73e8655986c

--- a/arch/arm/boot/dts/msm8974/msm8974-sec.dtsi
+++ b/arch/arm/boot/dts/msm8974/msm8974-sec.dtsi
@@ -359,6 +359,7 @@
 		qcom,sup-voltages = <2950 2950>;
 		qcom,bus-width = <8>;
 		qcom,nonremovable;
+		qcom,wakeup-on-idle;
 		qcom,bus-speed-mode = "HS200_1p8v", "DDR_1p8v";
 
 		qcom,msm-bus,name = "sdcc1";
