Update defconfig: Add alucard

--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -706,6 +706,8 @@ CONFIG_ARM_GIC=y
 # CONFIG_FIQ_DEBUGGER is not set
 CONFIG_INTELLI_PLUG=y
 CONFIG_MSM_HOTPLUG=y
+# CONFIG_ALUCARD_HOTPLUG is not set
+# CONFIG_ALUCARD_TOUCHSCREEN_BOOST is not set
 
 #
 # Bus support
@@ -828,6 +830,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_YANKACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIMM is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -839,6 +842,7 @@ CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTELLIMM=y
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
 
 #
 # ARM CPU frequency scaling drivers
