--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -2722,6 +2722,7 @@ CONFIG_FB_MSM_MDSS_COMMON=y
 # CONFIG_FB_MSM_MDP31 is not set
 # CONFIG_FB_MSM_MDP40 is not set
 CONFIG_FB_MSM_MDSS=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_MSM_MDP_NONE is not set
 # CONFIG_FB_MSM_EBI2 is not set
 # CONFIG_FB_MSM_MDDI is not set
