--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -850,6 +850,7 @@ CONFIG_CPU_FREQ_GOV_ALUCARD=y
 # CONFIG_ARM_EXYNOS4210_CPUFREQ is not set
 # CONFIG_ARM_EXYNOS4X12_CPUFREQ is not set
 # CONFIG_ARM_EXYNOS5250_CPUFREQ is not set
+CONFIG_LAZYPLUG=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
