--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.108 Kernel Configuration
+# Linux/arm 3.4.109 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -240,14 +240,14 @@ CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_FIFO is not set
-# CONFIG_DEFAULT_ROW is not set
+CONFIG_DEFAULT_ROW=y
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_VR is not set
 # CONFIG_DEFAULT_ZEN is not set
 # CONFIG_DEFAULT_BFQ is not set
-CONFIG_DEFAULT_FIOPS=y
+# CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_SIO is not set
-CONFIG_DEFAULT_IOSCHED="fiops"
+CONFIG_DEFAULT_IOSCHED="row"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
