defconfig: Enable ZRAM and use LZ4 compression

--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -766,7 +766,7 @@ CONFIG_VIRT_TO_BUS=y
 # CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_CLEANCACHE is not set
-CONFIG_ZSMALLOC_NEW=y
+CONFIG_ZSMALLOC=y
 CONFIG_PGTABLE_MAPPING=y
 # CONFIG_DIRECT_RECLAIM_FILE_PAGES_ONLY is not set
 # CONFIG_INCREASE_MAXIMUM_SWAPPINESS is not set
@@ -1383,6 +1383,8 @@ CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
 CONFIG_CMA=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
 # CONFIG_CMA_DEBUG is not set
 
 #
@@ -3585,7 +3587,6 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 #
 # CONFIG_SENSORS_ASP01_IIO is not set
 # CONFIG_IIO_SIMPLE_DUMMY is not set
-# CONFIG_ZSMALLOC is not set
 # CONFIG_FB_SM7XX is not set
 # CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
