--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -1641,6 +1641,7 @@ CONFIG_SLIP_MODE_SLIP6=y
 # CONFIG_USB_RTL8150 is not set
 CONFIG_USB_USBNET=y
 CONFIG_USB_NET_AX8817X=y
+CONFIG_USB_NET_AX88179_178A=y
 CONFIG_USB_NET_CDCETHER=y
 # CONFIG_USB_NET_CDC_EEM is not set
 CONFIG_USB_NET_CDC_NCM=y
