--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -878,6 +878,7 @@ CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
 CONFIG_CPU_FREQ_LIMIT_USERSPACE=y
 CONFIG_POWERSUSPEND=y
+CONFIG_SUSPEND_TIME_TIMEKEEPING=y
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_AUTOSLEEP=y
