Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,6 +1,6 @@
 [project]
 [access]
-	inheritFrom = CyanogenMod/android_device_samsung_msm8960-common
+	inheritFrom = All-Projects
 [receive]
 	requireChangeId = false
 [submit]
