Modify access rules

--- a/project.config
+++ b/project.config
@@ -7,8 +7,9 @@
 	mergeContent = false
 	action = rebase if necessary
 [access "refs/heads/*"]
-	create = group samsung_msm8974
-	push = group samsung_msm8974
-	label-Code-Review = -2..+2 group samsung_msm8974
-	label-Verified = -1..+1 group samsung_msm8974
-	submit = group samsung_msm8974
+	create = group samsung_hlte
+	push = group samsung_hlte
+	label-Code-Review = -2..+2 group samsung_hlte
+	label-Verified = -1..+1 group samsung_hlte
+	submit = group samsung_hlte
+	rebase = group samsung_hlte
