--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -758,6 +758,7 @@ CONFIG_PAGEFLAGS_EXTENDED=y
 CONFIG_SPLIT_PTLOCK_CPUS=4
 CONFIG_COMPACTION=y
 CONFIG_MIGRATION=y
+CONFIG_SEC_SLOWPATH=y
 # CONFIG_PHYS_ADDR_T_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
@@ -3609,12 +3610,12 @@ CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 CONFIG_SEC_OOM_KILLER=y
+# CONFIG_SEC_DEBUG_LMK_MEMINFO is not set
+# CONFIG_SEC_DEBUG_LMK_COUNT_INFO is not set
 # CONFIG_ANDROID_SWITCH is not set
 # CONFIG_ANDROID_INTF_ALARM_DEV is not set
 # CONFIG_PHONE is not set
 # CONFIG_USB_WPAN_HCD is not set
-CONFIG_ANDROID_LMK_ADJ_RBTREE=y
-CONFIG_ANDROID_BG_SCAN_MEM=y
 CONFIG_VNSWAP=y
 
 #
